# como-estruturar-projeto

./: README.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
test/: teste_pipeline.py
